# python-snake-poop

./: README.md  package_app.py  pyproject.toml  scatchpad.py  snake_poo.py  snake_poo.spec
src/python_snake_poop/: __init__.py
